--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,14 @@
     <input id="use-stun" type="checkbox"/>
     <label for="use-stun">Use STUN server</label>
 </div>
+<div>
+    <select id="video_name">
+            <option value='' >None</option>
+        {% for media_file in media_files %}
+            <option value={{media_file}} >{{ media_file }}</option>
+        {% endfor %}
+    </select>
+</div>
 <button id="start" onclick="start()">Start</button>
 <button id="stop" style="display: none" onclick="stop()">Stop</button>
 
@@ -38,7 +46,15 @@
     <video id="video" autoplay="true" playsinline="true"></video>
 </div>
 
-<script src="client.js"></script>
+
+<!--<form action="/offer" method="post">-->
+<!--    <input name="username">-->
+<!--    <input name="password">-->
+<!--    <button type="submit">Send</button>-->
+<!--</form>-->
+
+
+
 <script src="static/client.js"></script>
 </body>
 </html>
