--- a/templates/index.html
+++ b/templates/index.html
@@ -1,59 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebRTC webcam</title>
-    <style>
-    button {
-        padding: 8px 16px;
-    }
-
-    video {
-        width: 100%;
-    }
-
-    .option {
-        margin-bottom: 8px;
-    }
-
-    #media {
-        max-width: 1280px;
-    }
-    </style>
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
 </head>
 <body>
+<video
+    id="my-video"
+    class="video-js"
+    controls
+    preload="auto"
+    width="1000"
+    height="800"
+    data-setup="{}"
+  >
+    <source src="http://127.0.0.1:8000/video/{{path}}" type="video/mp4" />
+    <source src="http://127.0.0.1:8000/video/{{path}}" type="video/webm" />
+  </video>
 
-<div class="option">
-    <input id="use-stun" type="checkbox"/>
-    <label for="use-stun">Use STUN server</label>
-</div>
-<div>
-    <select id="video_name">
-            <option value='' >None</option>
-        {% for media_file in media_files %}
-            <option value={{media_file}} >{{ media_file }}</option>
-        {% endfor %}
-    </select>
-</div>
-<button id="start" onclick="start()">Start</button>
-<button id="stop" style="display: none" onclick="stop()">Stop</button>
-
-<div id="media">
-    <h2>Media</h2>
-
-    <audio id="audio" autoplay="true"></audio>
-    <video id="video" autoplay="true" playsinline="true"></video>
-</div>
-
-
-<!--<form action="/offer" method="post">-->
-<!--    <input name="username">-->
-<!--    <input name="password">-->
-<!--    <button type="submit">Send</button>-->
-<!--</form>-->
-
-
-<script src="/static/client.js"></script>
+  <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
 </body>
 </html>
